@@ -554,11 +554,21 @@ std::string CMouseHandler::GetCurrentTooltip(void)
 	float dist=helper->GuiTraceRay(camera->pos,dir,9000,unit,20,false);
 
 	if(unit){
-		s=unit->tooltip;
-		char tmp[500];
-		sprintf(tmp,"\nHealth %.0f/%.0f \nExperience %.2f Cost %.0f Range %.0f \n\xff\xd3\xdb\xffMetal: \xff\x50\xff\x50%.1f\xff\x90\x90\x90/\xff\xff\x50\x01-%.1f\xff\xd3\xdb\xff Energy: \xff\x50\xff\x50%.1f\xff\x90\x90\x90/\xff\xff\x50\x01-%.1f",
-			unit->health,unit->maxHealth,unit->experience,unit->metalCost+unit->energyCost/60,unit->maxRange, unit->metalMake, unit->metalUse, unit->energyMake, unit->energyUse);
-		s+=tmp;		
+		// show the player name instead of unit name if it has FBI tag showPlayerName
+		if(unit->unitDef->showPlayerName)
+		{
+			s=gs->players[gs->Team(unit->team)->leader]->playerName.c_str();
+		} else {
+			s=unit->tooltip;
+		}
+		// don't show the unit health and other info if it has FBI tag hideDamage and isn't on our team
+		if(!(unit->unitDef->hideDamage && unit->team != gu->myTeam))
+		{
+			char tmp[500];
+			sprintf(tmp,"\nHealth %.0f/%.0f \nExperience %.2f Cost %.0f Range %.0f \n\xff\xd3\xdb\xffMetal: \xff\x50\xff\x50%.1f\xff\x90\x90\x90/\xff\xff\x50\x01-%.1f\xff\xd3\xdb\xff Energy: \xff\x50\xff\x50%.1f\xff\x90\x90\x90/\xff\xff\x50\x01-%.1f",
+				unit->health,unit->maxHealth,unit->experience,unit->metalCost+unit->energyCost/60,unit->maxRange, unit->metalMake, unit->metalUse, unit->energyMake, unit->energyUse);
+			s+=tmp;
+		}
 		return s;
 	} else {
 		if(dist<8900){
